# auto-search-mvp

./: .gitignore  CLAUDE.md  README.md  auto_ru_playwright.py  drom_ru_playwright.py  get_session.py  playwright_base.py  vercel.json
apps/: package.json
apps/api/: pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/api/v1/: admin.py  analytics.py  demo.py  health.py  listings.py  metrics.py  search.py  search_history.py
apps/api/src/config/: brands.yaml  models.yaml
apps/api/src/core/: settings.py
apps/api/src/data_pipeline/: chunk.py  index.py  ingest.py  normalize.py  telegram_filters.py
apps/api/src/db/: models.py  session.py
apps/api/src/domain/: query_schema.py  result_schema.py
apps/api/src/integrations/embeddings/: embedder.py
apps/api/src/integrations/sources/: auto_ru.py  auto_ru_playwright.py  avito_playwright.py  base.py  benzclub.py  bmwclub.py  drom_ru.py  drom_ru_playwright.py  mock.py  telegram.py
apps/api/src/integrations/vector_db/: qdrant.py
apps/api/src/services/: analytics.py  answer_builder.py  brand_detector.py  car_entity_extractor.py  car_intent_classifier.py  ingest_quality.py  metrics_service.py  model_resolver.py  query_expander.py  query_normalizer.py  query_parser.py  query_router.py  retrieval_plan.py  search_service.py  taxonomy_service.py
apps/api/tests/: test_query_parser.py
apps/app/: page.tsx
apps/bot/: Dockerfile  requirements.txt
docs/: RUNBOOK_VPS.md  spec.md
infra/: MASTER_PROMPT_TG_BOT.md  deploy.sh  upload-to-vps.ps1  vps-setup.sh
scripts/: reindex.sh  smoke_test.py
(+148 files in other folders)
